# Grammatical_Framework_audit

./: .gf_audit_state.json  .gitignore  README.md  launch_cli.bat  launch_gui.bat  pyproject.toml  safe_ai_ready_rename.py
app/: __init__.py  bootstrap.py  config.py  main_cli.py  main_gui.py  models.py  state.py
app/audit/: __init__.py  audit_core.py  classifier.py  compiler.py  diff.py  file_selector.py  fingerprint.py  result_model.py  scanner.py
app/gui/: __init__.py  dialogs.py  main_window.py  validators.py  widgets.py
app/reports/: __init__.py  report_ai_ready.py  report_details.py  report_json.py  report_logs.py  report_md.py
app/utils/: __init__.py  gf_utils.py  io_utils.py  logging_utils.py  path_utils.py  process_utils.py
tests/: test_classifier.py  test_diff.py  test_reports.py  test_scanner.py  test_smoke.py
